kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vys-api-deployment
  namespace: default
  labels:
    app: vys-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vys-api
  template:
    metadata:
      labels:
        app: vys-api
    spec:
      containers:
      - name: vys-api-image
        image: 10.252.0.103:8082/kubernetes-test-image/vys-api2:v1
        ports:
          - containerPort: 80

      imagePullSecrets:
        - name: regcred
